--- a/index.html
+++ b/index.html
@@ -9,62 +9,51 @@
 </head>
 <body>
 
-	        <div class="hoodie-accountbar">
+	<div class="hoodie-accountbar">
+		<div class="hoodie-account-signedout">
+			<span class="btn-group">
+				<ul class="dropdown-menu pull-right">
+					<li><a href="#" data-hoodie-action="signup">Sign Up</a></li>
+					<li><a href="#" data-hoodie-action="signin">Sign In</a></li>
+					<li><a href="#" data-hoodie-action="resetpassword">Reset Password</a></li>
+					<li><a href="#" data-hoodie-action="destroy">Clear local data</a></li>
+				</ul>
+			</span>
+		</div><!-- /.hoodie-account-signedout -->
 
-          <div class="hoodie-account-signedout">
-            <span class="btn-group">
-              <button class="btn btn-small btn-inverse" data-hoodie-action="signup">Sign Up</button>
-              <button class="btn btn-small dropdown-toggle btn-inverse" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu pull-right">
-                <li><a href="#" data-hoodie-action="signin">Sign In</a></li>
-                <li><a href="#" data-hoodie-action="resetpassword">Reset Password</a></li>
-                <li><a href="#" data-hoodie-action="destroy">Clear local data</a></li>
-              </ul>
-            </span>
-          </div><!-- /.hoodie-account-signedout -->
+		<div class="hoodie-account-signedin">
+			Hello,
+			<span class="hoodie-username"><!-- usern name will be filled in here --></span>
+				<ul class="dropdown-menu pull-right">
+					<li><a href="#" data-hoodie-action="signout">Sign Out</a></li>
+					<li><a href="#" data-hoodie-action="changepassword">Change Password</a></li>
+					<li><a href="#" data-hoodie-action="changeusername">Change Username</a></li>
+					<li><a href="#" data-hoodie-action="destroy">Destroy Account</a></li>
+				</ul>
+			</span>
+		</div><!-- /.hoodie-account-signedin -->
 
-          <div class="hoodie-account-signedin">
-            Hello,
-            <span class="hoodie-username"><!-- usern name will be filled in here --></span>
-            <span class="btn-group">
-              <button class="btn btn-small btn-inverse" data-hoodie-action="signout">Sign Out</button>
-              <button class="btn btn-small dropdown-toggle btn-inverse" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu pull-right">
-                <li><a href="#" data-hoodie-action="changepassword">Change Password</a></li>
-                <li><a href="#" data-hoodie-action="changeusername">Change Username</a></li>
-                <li><a href="#" data-hoodie-action="destroy">Destroy Account</a></li>
-              </ul>
-            </span>
-          </div><!-- /.hoodie-account-signedin -->
-
-          <div class="hoodie-account-error">
-            Hello,
-            <span class="hoodie-username"><!-- usern name will be filled in here --></span>.
-            <span class="btn-group">
-              <button class="btn btn-small btn-danger" data-hoodie-action="signin">Authentication error: Sign in again</button>
-              <button class="btn btn-small dropdown-toggle btn-danger" data-toggle="dropdown">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu pull-right">
-                <li><a href="#" data-hoodie-action="signout">Sign out</a></li>
-              </ul>
-            </span>
-          </div><!-- /.hoodie-account-error -->
-        </div><!--/hoodieAccountBar -->
-      </div>
-
-
+		<div class="hoodie-account-error">
+			Hello,
+			<span class="hoodie-username"><!-- usernname will be filled in here --></span>.
+			<span class="btn-group">
+				<button class="btn btn-small btn-danger" data-hoodie-action="signin">Authentication error: Sign in again</button>
+				<button class="btn btn-small dropdown-toggle btn-danger" data-toggle="dropdown">
+					<span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu pull-right">
+					<li><a href="#" data-hoodie-action="signout">Sign out</a></li>
+				</ul>
+			</span>
+		</div><!-- /.hoodie-account-error -->
+	</div><!--/hoodieAccountBar -->
 
 	<script type="text/x-handlebars" data-template-name="todos">
 		<section id="todoapp">
 			<header id="header">
 				<h1>todos</h1>
 				{{view Ember.TextField id="new-todo" placeholder="What needs to be done?"
-							 valueBinding="newTitle" action="createTodo"}}
+							valueBinding="newTitle" action="createTodo"}}
 			</header>
 			{{#if length}}
 				<section id="main">
@@ -121,10 +110,10 @@
 	<!-- TODO: change out with a component when a built one is available on Bower -->
 	<script src="js/libs/ember-data.js"></script>
 	<script src="js/vendor/bootstrap.js"></script>
-    <script src="js/vendor/bootstrap.modalform.js"></script>
+	<script src="js/vendor/bootstrap.modalform.js"></script>
 	<script src="js/vendor/hoodie_adapter/hoodie.js"></script>
 	<script src="js/vendor/hoodie.accountbar.bootstrap.js"></script>
-    <script src="js/vendor/hoodie_adapter/hoodie_adapter.js"></script>
+	<script src="js/vendor/hoodie_adapter/hoodie_adapter.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/router.js"></script>
 	<script src="js/models/todo.js"></script>
